@@ -1693,7 +1693,7 @@ CORE_SRX_TABLE_HEADER_Language_Name=Language name
 
 CORE_SRX_TABLE_HEADER_Language_Pattern=Language pattern
 
-CORE_SRX_TABLE_COLUMN_Break=Break/exception
+CORE_SRX_TABLE_COLUMN_Break=Break
 
 CORE_SRX_TABLE_COLUMN_Before_Break=Pattern before
 
